# backend-academy-tinkoff

./: .gitignore  README.md
django/django/: Makefile  README.md
django/django/myapp/: settings.py  urls.py
django/django/polls/: admin.py  models.py  urls.py
django/django/polls/migrations/: 0001_initial.py  0002_product_shop_delete_choice_delete_question_and_more.py
django/django/polls/templates/: create_comment.html  create_post.html  index.html
django/django/polls/templates/shop/: shops.html
django/polls/: views.py
django/polls/migrations/: 0003_product_title.py  0004_alter_product_description.py  0005_comment_post.py  0006_remove_post_comments.py  0007_comment_post.py
django/polls/templates/: post.html  resume.html
hw1/: hw1.py
hw1.11/: README.md  main.py  test.py
hw1.12/: main.py  tests.py
hw1.12/configurations/: conf_a.yml  conf_b.yml  conf_c.yml
hw1.2/golf/: golf.py
hw1.2/tests/: test_golf.py
hw1.3/: log_parse.py
hw1.3/tests/: ignore_urls_when_ignored_urls_in_log.json  ignore_urls_when_urls_not_in_log.json  request_type_param_not_in_log.json  start_param_after_finish_log.json  stop_param_before_start_log.json
hw1.4/: README.md  blockchain.py  tests.py
hw1.5/: README.md  requirements.txt  test.py  tv_program.py
hw1.6/: server.py
hw1.6/tests/: test_server.py
hw1.7/: Makefile  README.md  main.py  setup.py  test.py
hw1.7/tests/: test.py
hw1.7/tvbot/: main.py
hw1.9/: text_history.py
hw1.9/tests/: test_text_history.py
poetry-tvbot-demo/: pyproject.toml
poetry-tvbot-demo/poetry_tvbot_demo/: tvbot-demo.py
