[tool.poetry]
name = "poetry-tvbot-demo"
version = "0.1.0"
description = ""
authors = ["vverq"]
readme = "README.md"
packages = [{include = "poetry_tvbot_demo"}]

[tool.poetry.dependencies]
python = "^3.9"
tvbotlib = { git = "https://github.com/vverq/backend-academy-tinkoff.git", branch = "homework1.10", subdirectory = "hw1.7"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
